# pcmanfm

./: .gitignore  configure.ac
data/: Makefile.am  pcmanfm.conf
data/icons/: Makefile.am
data/ui/: pref.glade
debian/: changelog  control  copyright  gbp.conf  pcmanfm.postinst  rules  watch
debian/source/: include-binaries
debian/upstream/: metadata
src/: desktop-ui.c  desktop.c  main-win-ui.c  main-win.c  pref.c  tab-page.c
