EXTRA_DIST = \
	$(icon16_DATA) \
	$(icon24_DATA) \
	$(icon32_DATA) \
	$(icon48_DATA)

icon16dir = $(datadir)/icons/hicolor/16x16/actions

icon16_DATA = \
	hicolor/16x16/actions/fm-compact.png \
	hicolor/16x16/actions/fm-details.png \
	hicolor/16x16/actions/fm-icons.png \
	hicolor/16x16/actions/fm-new.png \
	hicolor/16x16/actions/fm-thumbs.png

icon24dir = $(datadir)/icons/hicolor/24x24/actions

icon24_DATA = \
	hicolor/24x24/actions/fm-compact.png \
	hicolor/24x24/actions/fm-details.png \
	hicolor/24x24/actions/fm-icons.png \
	hicolor/24x24/actions/fm-new.png \
	hicolor/24x24/actions/fm-thumbs.png

icon32dir = $(datadir)/icons/hicolor/32x32/actions

icon32_DATA = \
	hicolor/32x32/actions/fm-compact.png \
	hicolor/32x32/actions/fm-details.png \
	hicolor/32x32/actions/fm-icons.png \
	hicolor/32x32/actions/fm-new.png \
	hicolor/32x32/actions/fm-thumbs.png

icon48dir = $(datadir)/icons/hicolor/48x48/actions

icon48_DATA = \
	hicolor/48x48/actions/fm-compact.png \
	hicolor/48x48/actions/fm-details.png \
	hicolor/48x48/actions/fm-icons.png \
	hicolor/48x48/actions/fm-new.png \
	hicolor/48x48/actions/fm-thumbs.png
